fix(plugins/plugin-client-common): patternfly popover close button has odd spacing
Fixes #6345

--- a/plugins/plugin-client-common/web/scss/components/Popover/Carbon.scss
+++ b/plugins/plugin-client-common/web/scss/components/Popover/Carbon.scss
@@ -15,6 +15,7 @@
  */
 
 @import 'common';
+@import 'mixins';
 @import '~carbon-components/scss/components/tooltip/_tooltip.scss';
 
 .kui--status-stripe-element-wrapper.bx--tooltip__label {
@@ -22,12 +23,14 @@
   color: var(--color-text-01);
 }
 
-.kui--popover.bx--tooltip {
-  max-width: 40rem; /* hmm, Carbon doesn't make this easy */
-  color: var(--color-text-01);
-  background: var(--color-base02);
+@include Popover {
+  &.bx--tooltip {
+    max-width: 40rem; /* hmm, Carbon doesn't make this easy */
+    color: var(--color-text-01);
+    background: var(--color-base02);
 
-  a {
-    color: var(--color-base0C);
+    a {
+      color: var(--color-base0C);
+    }
   }
 }
